--- a/DRsim/CMakeLists.txt
+++ b/DRsim/CMakeLists.txt
@@ -60,3 +60,4 @@ file(COPY ${LS_ABS} DESTINATION ${PROJECT_BINARY_DIR})
 #
 install(TARGETS DRsim DESTINATION bin)
 install(FILES ${DRsim_MACROS} DESTINATION .)
+install(FILES ${LS_ABS} DESTINATION .)
